<?xml version="1.0" encoding="utf-8"?>
<navigation android:id="@+id/mobile_navigation"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/nav_garden">

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.poli.botanicalassistant.ui.about.AboutUsFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us">
        <action
            android:id="@+id/action_nav_about_us_to_nav_garden"
            app:destination="@id/nav_garden" />
        <action
            android:id="@+id/action_nav_about_us_to_nav_videos"
            app:destination="@id/nav_videos" />
    </fragment>

    <fragment
        android:id="@+id/nav_garden"
        android:name="com.poli.botanicalassistant.ui.garden.list.GardenFragment"
        android:label="@string/menu_garden"
        tools:layout="@layout/fragment_garden">
        <action
            android:id="@+id/action_nav_garden_to_plantProfileFragment"
            app:destination="@id/plantProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_videos"
        android:name="com.poli.botanicalassistant.ui.video.VideosFragment"
        android:label="@string/menu_videos"
        tools:layout="@layout/fragment_videos">
        <action
            android:id="@+id/action_videosFragment_to_videoPlayerFragment"
            app:destination="@id/nav_video_player">
            <argument
                android:name="videoId"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_video_player"
        android:name="com.poli.botanicalassistant.ui.video.VideoPlayerFragment"
        android:label="@string/menu_video_player"
        tools:layout="@layout/fragment_video_player">
        <argument
            android:name="videoId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_web"
        android:name="com.poli.botanicalassistant.ui.web.WebNavigatorFragment"
        android:label="@string/menu_web"
        tools:layout="@layout/fragment_web_navigator" />
    <fragment
        android:id="@+id/plantProfileFragment"
        android:name="com.poli.botanicalassistant.ui.garden.profile.PlantProfileFragment"
        android:label="@string/menu_plant_profile">
        <argument
            android:name="plant"
            app:argType="com.poli.botanicalassistant.ui.garden.model.PlantUi" />
    </fragment>
</navigation>
